# ml-ds-assignment

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile.api  Dockerfile.dashboard  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml  container.yml  secret-scan.yml
configs/: config.yaml
docs/: CARS24_SYSTEM_DESIGN.md  SQL_ANALYTICS.md  VERIFIED_RESULTS.md
notebooks/: 01_data_exploration.ipynb  02_pricing_model.ipynb  03_conversion_models.ipynb  04_recommendations_and_analytics.ipynb
scripts/: build_features.py  check_model_quality.py  check_secrets.py  evaluate_all_models.py  generate_data.py  import_ga4.py  initialize_database.py  run_monitoring.py  run_pipeline.py  run_sql_analytics.py  serve.py  smoke_test.py  train_all_models.py
sql/analytics/: campaign_attribution.sql  campaign_quality.sql  cohort_retention.sql  customer_360.sql  demand_supply_gap.sql  funnel_analysis.sql  funnel_transition_times.sql  inventory_aging.sql  inventory_survival.sql  position_bias.sql  price_analysis.sql  recommendation_ips.sql  recommendation_metrics.sql  user_intent_analysis.sql
sql/ddl/: create_tables.sql
sql/marts/: create_marts.sql
sql/quality/: data_quality_checks.sql
src/driveintent/: config.py
tests/: conftest.py  test_analytics.py  test_api.py  test_data_generation.py  test_data_validation.py  test_deployment.py  test_features.py  test_ga4.py  test_models.py  test_monitoring.py  test_ranking.py  test_recommender.py  test_secret_scan.py  test_serving.py  test_sql_queries.py
(+24 files in other folders)
