[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "driveintent"
version = "1.0.0"
description = "Intent-aware used-car marketplace intelligence platform (synthetic data)"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0", "numpy>=1.26", "scipy>=1.11", "pyarrow>=14",
  "duckdb>=0.10", "scikit-learn>=1.4", "catboost>=1.2", "implicit>=0.7",
  "joblib>=1.3", "pyyaml>=6", "fastapi>=0.110", "uvicorn[standard]>=0.29",
  "pydantic>=2.6", "streamlit>=1.33", "plotly>=5.20",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov", "httpx>=0.27", "ruff>=0.4", "black>=24"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
# Streamlit pages intentionally import expensive modules at point of use.  The
# existing modeling code also uses a few compact semicolon-separated assignments;
# retain those as legacy exceptions while enforcing all other E/F/I/W rules.
ignore = ["E402", "E501", "E702"]

[tool.black]
line-length = 110

[tool.pytest.ini_options]
testpaths = ["tests"]
